// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeFile generate story loader 1`] = `
"// Auto-generated file created by react-native-storybook-loader
// Do not edit.
//
// https://github.com/elderfo/react-native-storybook-loader.git

function loadStories() {
  const components = {};
  components['file3'] = require('./parent/file3');
  components['file1'] = require('./src/file1');
  components['file2'] = require('./src/sub/file2');
  components['file4'] = require('./src/writer/sub/file4');
  components['file5'] = require('./src/writer/sub/sub/file5');
  return components;
}

const stories = [
  './parent/file3',
  './src/file1',
  './src/sub/file2',
  './src/writer/sub/file4',
  './src/writer/sub/sub/file5'
];

module.exports = {
  loadStories,
  stories,
};
"
`;

exports[`writeFile should generate dummy story loader if no stories were found 1`] = `
"// Auto-generated file created by react-native-storybook-loader
// Do not edit.
//
// https://github.com/elderfo/react-native-storybook-loader.git

function loadStories() {
  const components = {};

  return components;
}

const stories = [

];

module.exports = {
  loadStories,
  stories,
};
"
`;
